# largeliterarymodels

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml  test.yml
largeliterarymodels/: __init__.py  annotate.py  llm.py  providers.py  task.py  utils.py
largeliterarymodels/analysis/: __init__.py  adapters.py  cross_language.py  embeddings.py  features.py  groups.py  propagate.py  reader.py  registry.py  reliability.py  social_networks.py  stats.py
largeliterarymodels/cli/: __init__.py  cloud.py  main.py  models.py  output.py  registry.py
largeliterarymodels/cli/adapters/: base.py  passage.py
largeliterarymodels/integrations/: __init__.py  llmtasks.py  lltk.py
largeliterarymodels/tasks/: __init__.py  classify_character.py  classify_frye.py  classify_genre.py  classify_genre_lite.py  classify_passage.py  classify_passage_content.py  classify_passage_form.py  clean_ocr.py  extract_bibliography.py  extract_social_network.py  resolve_characters.py  translate_word.py
notebooks/: classify_genre.ipynb  extract_bibliography.ipynb  social_networks.ipynb
scripts/: analyze_passage_form_tag_discrimination.py  analyze_passage_joint_discrimination.py  analyze_passage_tag_discrimination.py  analyze_social_networks.py  batch_social_network.py  export_passage_markdown.py  migrate_human_annotations_to_hashstash.py  pilot_arc_fiction_de_genre_lite.py  pilot_arc_fiction_genre_lite.py  pilot_arc_fiction_genre_raw.py  pilot_french_passage_content.py  pilot_german_passage_content.py  pilot_passage_content.py  pilot_passage_form.py  prototype_social_network.py  prototype_social_network_v2.py  prototype_social_network_v3.py  prototype_social_network_v4.py  prototype_social_network_v5.py  prototype_social_network_v6.py  prototype_social_network_v7.py  smoke_passage_content.py  smoke_passage_form.py  test_claude_cli_genre.py
scripts/cloud/: vastai.py
scripts/hpc/: README.md  export_passages.py  launch_vllm.sbatch  run_batch.sh  run_social_network.ipynb  run_social_network_colab.ipynb
tests/: test_embeddings.py  test_llm.py  test_providers.py  test_task.py  test_utils.py
